--- a/src/components/ChatDetail/styles.module.less
+++ b/src/components/ChatDetail/styles.module.less
@@ -1,8 +1,8 @@
 .container {
-  .chatDetailHeader {
-  }
-  .chatDetailContent {
-  }
+  // .chatDetailHeader {
+  // }
+  // .chatDetailContent {
+  // }
   .chatDetailFooter {
     :global {
       .ant-btn {
