--- a/src/containers/Layout/styles.module.less
+++ b/src/containers/Layout/styles.module.less
@@ -1,5 +1,11 @@
 .layoutContainer {
   :global {
+    .ant-btn {
+      &:hover {
+        color: white;
+        border: none;
+      }
+    }
     .ant-layout-header {
       background-color: white;
       padding-inline: 0;
