--- a/src/components/ChatMessage/styles.module.less
+++ b/src/components/ChatMessage/styles.module.less
@@ -26,6 +26,15 @@
     transform: translateY(0);
   }
 }
+.imgContainer {
+  :global {
+    .ant-image-img {
+      height: 300px;
+      object-fit: contain;
+      border-radius: 8px;
+    }
+  }
+}
 
 // @keyframes jumping1 {
 //   0% {
