complete schedule and update profile

--- a/src/components/UserInfo/styles.module.less
+++ b/src/components/UserInfo/styles.module.less
@@ -12,19 +12,14 @@
     }
   }
   .buttonArea {
-    margin: auto;
-    width: 90px;
     :global {
       .ant-btn {
         border: none;
-        background-color: rgba(22, 53, 53, 0.8);
+        // background-color: rgba(22, 53, 53, 0.8);
         color: white;
         font-size: 16px;
         height: 36px;
         font-weight: 500;
-        &:hover {
-          background-color: rgba(22, 53, 53, 1);
-        }
       }
     }
   }
