--- a/src/components/ControlCall/styles.module.less
+++ b/src/components/ControlCall/styles.module.less
@@ -1,32 +1,31 @@
 .controls {
-    position: absolute;
-     bottom: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: -20px auto;
-    display: grid;
-    grid-template-columns: repeat(3, 33%);
-    align-items: center;
-    justify-items: center;
-    z-index: 1;
-    width: 500px;
-    max-width: 60vw;
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: -20px auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 1;
+  width: 500px;
+  max-width: 60vw;
 }
 
 .on {
-    background: #F7F7F7;
-    color: #38373A;
-    border-width: 1px;
-    border-color: #38373A;
-    border-style: solid;
+  background: #f7f7f7;
+  color: #38373a;
+  border-width: 1px;
+  border-color: #38373a;
+  border-style: solid;
 }
 
 .off {
-    padding: 10px;
-    cursor: pointer;
-    background: #38373A;
-    color: #F7F7F7;
-    border-width: 1px;
-    border-color: #F7F7F7;
-    border-style: solid;
+  padding: 10px;
+  cursor: pointer;
+  background: #38373a;
+  color: #f7f7f7;
+  border-width: 1px;
+  border-color: #f7f7f7;
+  border-style: solid;
 }
