--- a/src/components/Comment/styles.module.less
+++ b/src/components/Comment/styles.module.less
@@ -7,3 +7,9 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
 }
+
+.commentImage {
+  max-width: 200px;
+  border-radius: 0.5rem;
+  // margin-top: 10px;
+}
