--- a/src/components/RegisterForm/styles.module.less
+++ b/src/components/RegisterForm/styles.module.less
@@ -31,6 +31,9 @@
     font-weight: 600;
   }
   :global {
+    .ant-upload-list-item-actions {
+      display: none;
+    }
     .ant-input {
       width: 400px;
     }
