--- a/src/components/RegisterForm/styles.module.less
+++ b/src/components/RegisterForm/styles.module.less
@@ -73,12 +73,14 @@
           width: 100%;
         }
         .ant-btn {
-          background-color: #5eb5c0;
+          background-color: #112b2e;
           border: none;
           border-radius: 3px;
           width: 100%;
+          opacity: 0.8;
           &:hover {
-            background-color: #53a4af;
+            background-color: #112b2e;
+            opacity: 1;
           }
         }
       }
